metadata/force-app/main/default/objects/CustomName_aYOaM__c/CustomName_aYOaM__c.object-meta.xml
<CustomObject>
    <description>Description_fPngE</description>
    <label>CustomLabel_dRHly</label>
    <nameField>
        <label>CustomLabel_dRHly</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dRHlys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>