metadata/force-app/main/default/objects/CustomName_aYOaM__c/fields/CustomField_JFpgS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_JFpgS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLGBFR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>