metadata/force-app/main/default/objects/CustomName_aYOaM__c/fields/CustomField_LXCCB__c.field-meta.xml
<CustomField>
    <fullName>CustomField_LXCCB__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqsXev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>